# KnowDeck

./: .gitignore
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  config.py  generator.py  main.py  store.py  types.py
backend/app/static/: .gitkeep
frontend/: README.md  index.html  next.config.js  package-lock.json  package.json  script.js  styles.css
frontend/app/: layout.tsx  mermaidTheme.ts  page.tsx
frontend/app/components/: Mermaid.tsx
