[tool.poetry]
name = "knowdeck"
version = "0.1.0"
description = "KnowDeck backend - FastAPI service"
authors = ["KnowDeck <dev@knowdeck.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
supabase = "^2.7.4"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
api = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 